# spin

examples/http-rust/: Cargo.toml  spin.toml
examples/http-rust/src/: lib.rs
